--- a/snake.html
+++ b/snake.html
@@ -1,11 +1,14 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="snakestyle.css">
     </head>
     <body>
         <h1>Snake Game</h1>
         <button id="start">Start/Restart</button>
-        <h2>Score <span id="score"></span></h2>
+        <h2>Score: <span id="score"></span></h2>
         <div class="grid"></div>
         <script src="snake.js"></script>
     </body>
